2017-01-20  Ryan Haddad  <ryanhaddad@apple.com>

        Unreviewed, rolling out r210778.

        This change caused multiple LayoutTests to crash.

        Reverted changeset:

        "[Cocoa] Unify FontPlatformData's hashing and equality
        operators"
        https://bugs.webkit.org/show_bug.cgi?id=167061
        http://trac.webkit.org/changeset/210778

2017-01-20  Joseph Pecoraro  <pecoraro@apple.com>

        Remove outdated ENABLE(CSP_NEXT) build flag
        https://bugs.webkit.org/show_bug.cgi?id=167252

        Reviewed by Brent Fulgham.

        * Configurations/FeatureDefines.xcconfig:
        * dom/Document.idl:
        * page/RuntimeEnabledFeatures.cpp:
        (WebCore::RuntimeEnabledFeatures::reset):
        * page/RuntimeEnabledFeatures.h:
        (WebCore::RuntimeEnabledFeatures::experimentalContentSecurityPolicyFeaturesEnabled): Deleted.
        (WebCore::RuntimeEnabledFeatures::setExperimentalContentSecurityPolicyFeaturesEnabled): Deleted.
        * page/csp/ContentSecurityPolicy.cpp:
        (WebCore::ContentSecurityPolicy::experimentalFeaturesEnabled): Deleted.
        * page/csp/ContentSecurityPolicy.h:

2017-01-20  Zalan Bujtas  <zalan@apple.com>

        Simple line layout: Add support for non-breaking space character.
        https://bugs.webkit.org/show_bug.cgi?id=167250
        <rdar://problem/30119638>

        Reviewed by Antti Koivisto.

        Do not bail out on noBreakSpace character.
        The line breaking logic already takes noBreakSpace characters into account.
        (except the peculiar "-webkit-nbsp-mode: space" mode)

        Covered by existing test cases.

        * rendering/SimpleLineLayout.cpp:
        (WebCore::SimpleLineLayout::canUseForText):
        (WebCore::SimpleLineLayout::canUseForStyle):
        (WebCore::SimpleLineLayout::printReason):

2017-01-20  Antoine Quint  <graouts@apple.com>

        Web Animations should be off by default and enabled as an experimental feature