@@ -36,7 +36,8 @@
 namespace WebCore {
 
 #define URL_PARSER_DEBUGGING 0
-    
+#define COMPARE_URLPARSERS 0
+
 #if URL_PARSER_DEBUGGING
 #define URL_PARSER_LOG(...) LOG(URLParser, __VA_ARGS__)
 #else
@@ -1116,6 +1117,17 @@ URLParser::URLParser(const String& input, const URL& base, const TextEncoding& e
             ASSERT(allValuesEqual(parser.result(), m_url));
     }
 #endif
+
+#if COMPARE_URLPARSERS
+    ASSERT(URLParser::enabled());
+    URLParser::setEnabled(false);
+    URL parsedWithOldParser = URL(base, input, encoding);
+    if (parsedWithOldParser != m_url)
+        WTFLogAlways("URLParser Differs: Input <%s> Base <%s> Encoding <%s>", input.utf8().data(), base.string().utf8().data(), encoding.name());
+    else
+        WTFLogAlways("URLParser Same: Input <%s> Base <%s> Encoding <%s>", input.utf8().data(), base.string().utf8().data(), encoding.name());
+    URLParser::setEnabled(true);
+#endif
 }
 
 template<typename CharacterType>
@@ -1833,7 +1845,6 @@ void URLParser::parse(const CharacterType* input, const unsigned length, const U
         LOG_FINAL_STATE("SpecialAuthorityIgnoreSlashes");
         failure();
         return;
-        break;
     case State::AuthorityOrHost:
         LOG_FINAL_STATE("AuthorityOrHost");
         m_url.m_userEnd = currentPosition(authorityOrHostBegin);
